# GTMLens

./: .gitignore  README.md  USER_MANUAL.md  claude.md  nixpacks.toml  pyproject.toml
api/: db.py  deps.py  main.py  rate_limit.py
api/routes/: analyze.py  auth.py  contacts.py  data.py  experiment.py  narrative.py  outreach.py  segment.py
core/: auth.py  causal.py  email_sender.py  experiment.py  narrative.py  outreach.py  preprocess.py
data/: ground_truth.py  seed_db.py  synthetic.py
ingestion/: schema_mapper.py  validator.py
tests/: test_auth.py  test_causal.py  test_experiment.py  test_narrative.py  test_outreach.py  test_preprocess.py  test_schema_mapper.py  test_validator.py
ui/: index.html  package-lock.json  package.json  tailwind.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/charts/: FunnelChart.tsx  TrendChart.tsx
ui/src/components/ui/: Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  ErrorBoundary.tsx  Input.tsx  Stat.tsx
ui/src/lib/: api.ts  auth.ts  utils.ts
ui/src/pages/: AuthPage.tsx  DataPage.tsx  FunnelPage.tsx  LiftPage.tsx  OutreachPage.tsx
ui/src/types/: api.ts
